# rust-minidump

./: .craft.yml  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASES.md  bindgen.sh  dist-workspace.toml  test-all.sh  
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  web.yml
breakpad-symbols/: Cargo.toml  README.md
breakpad-symbols/fuzz/: Cargo.toml
breakpad-symbols/fuzz/fuzz_targets/: cfi_eval.rs  symbol_file.rs
breakpad-symbols/src/: http.rs  lib.rs  multi_provider.rs  symbolizer.rs
breakpad-symbols/src/sym_file/: mod.rs  parser.rs  types.rs  walker.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  intro.md
examples/: dumpmodules.rs
minidump/: Cargo.toml  README.md
minidump-analyzer/: Cargo.toml
minidump-analyzer/src/: main.rs
minidump-analyzer/tests/: analyze.rs  client.rs
minidump-common/: Cargo.toml  LICENSE  README.md  _build.rs
minidump-common/src/: format.rs  lib.rs  linux_errors.rs  mac_errors.rs  teb.rs  traits.rs  windows_errors.rs
minidump-common/src/errors/: linux.rs  macos.rs  mod.rs  windows.rs  windows_gen.rs
minidump-processor/: Cargo.toml  README.md  json-schema.md
minidump-processor/fuzz/: Cargo.toml
minidump-processor/fuzz/fuzz_targets/: process.rs  walk_stack.rs
minidump-processor/fuzz/src/: lib.rs
minidump-processor/src/: arg_recovery.rs  dwarf_symbolizer.rs  evil.rs  exploitability.rs  integrity.rs  lib.rs  op_analysis.rs  process_state.rs  processor.rs  symbols.rs  system_info.rs
minidump-processor/src/stackwalker/: amd64.rs  amd64_unittest.rs  arm.rs  arm64.rs  arm64_old.rs  arm64_unittest.rs  arm_unittest.rs  mips.rs  mod.rs  unwind.rs  x86.rs  x86_unittest.rs
minidump-processor/tests/: test_processor.rs
minidump-stackwalk/: Cargo.toml  README.md  oranda.json
minidump-stackwalk/src/: main.rs
minidump-stackwalk/tests/: test-minidump-stackwalk.rs
minidump-stackwalk/tests/snapshots/: test_minidump_stackwalk__dump-brief.snap  test_minidump_stackwalk__dump.snap  test_minidump_stackwalk__human-brief.snap  test_minidump_stackwalk__human-stable-all.snap  test_minidump_stackwalk__human-symbols.snap  test_minidump_stackwalk__human-unloaded.snap  test_minidump_stackwalk__human-unstable-all.snap  test_minidump_stackwalk__human.snap  test_minidump_stackwalk__json-pretty-evil-symbols.snap  test_minidump_stackwalk__json-pretty-symbols.snap  test_minidump_stackwalk__json-pretty-unloaded.snap  test_minidump_stackwalk__json-pretty.snap  test_minidump_stackwalk__json-stable-all.snap  test_minidump_stackwalk__json-unstable-all.snap  test_minidump_stackwalk__json.snap  test_minidump_stackwalk__linux_human.snap  test_minidump_stackwalk__linux_json_pretty.snap  test_minidump_stackwalk__long-help.snap  test_minidump_stackwalk__macos_inlines_human.snap  test_minidump_stackwalk__macos_inlines_json_pretty.snap  test_minidump_stackwalk__markdown-help.snap  test_minidump_stackwalk__short-help.snap  test_minidump_stackwalk__trace.snap
minidump-stackwalk/wix/: main.wxs
minidump-symbol-client/: Cargo.toml  README.md
minidump-symbol-client/src/: lib.rs
minidump-synth/: Cargo.toml  README.md
minidump-synth/src/: lib.rs
minidump-tools/: Cargo.toml
minidump-tools/src/: lib.rs
minidump-unwind/: Cargo.toml  README.md
minidump-unwind/fuzz/: Cargo.toml
minidump-unwind/fuzz/fuzz_targets/: unwind.rs
minidump-unwind/src/: amd64.rs  amd64_unittest.rs  arm.rs  arm64.rs  arm64_old.rs  arm64_unittest.rs  arm_unittest.rs  lib.rs  mips.rs  riscv64.rs  symbols.rs  unwind.rs  x86.rs  x86_unittest.rs
minidump-unwind/src/symbols/: debuginfo.rs  mod.rs
minidump-walk-stack/: Cargo.toml
minidump-walk-stack/fuzz/: Cargo.toml
minidump-walk-stack/fuzz/fuzz_targets/: walk_stack.rs
minidump-walk-stack/src/: amd64.rs  lib.rs  mips.rs  x86.rs
minidump/examples/: dumpmodules.rs
minidump/fuzz/: Cargo.toml
minidump/fuzz/fuzz_targets/: parse.rs
minidump/src/: context.rs  iostuff.rs  lib.rs  minidump.rs  stability_report.rs  strings.rs  synth_minidump.rs  system_info.rs
minidump/tests/: test_minidump.rs
range-map/: Cargo.toml
range-map/src/: lib.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: context.rs  iostuff.rs  lib.rs  minidump.rs  minidump_format.rs  process_state.rs  processor.rs  range_map.rs  synth_minidump.rs  system_info.rs
src/stackwalker/: mod.rs  unwind.rs  x86.rs  x86_unittest.rs
src/stackwalker/tests/: x86_unittest.rs
synth-minidump/: Cargo.toml  README.md
synth-minidump/src/: lib.rs
testdata/: README.md  evil.json  invalid-parameter.dmp  invalid-range.dmp  invalid-record-count.dmp  linux-mini.dmp  pipeline-inlines-macos-segv.dmp  simple-crashpad.dmp  stability-report.dmp
testdata/symbols/crash-client/509C0610949836F7B70BD88BCF03E5400/: crash-client.sym
tests/: readme.rs  skeptic.rs  test_minidump.rs  test_processor.rs
