[workspace]
members = [
        "breakpad-symbols",
        "minidump",
        "minidump-common",
        "minidump-processor",
        "minidump-stackwalk",
        "minidump-synth",
        "minidump-unwind",
]
exclude = [
    "testdata/*",
]
resolver = "2"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
