[workspace]
members = [
        "breakpad-symbols",
        "minidump",
        "minidump-common",
        "minidump-processor",
        "minidump-stackwalk",
        "minidump-synth",
        "minidump-unwind",
]
exclude = [
    "testdata/*",
]
resolver = "2"

[workspace.package]
license = "MIT"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
version = "0.26.0"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
