[package]
name = "breakpad-symbols"
description = "A library for working with Google Breakpad's text-format symbol files."
version = "0.24.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
exclude = ["testdata/*"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Private API, only here to support the fuzzer
fuzz = []
# Allow retrieval of symbols via HTTP
http = ["reqwest", "tempfile"]
mozilla_cab_symbols = ["http", "cab"]

[dependencies]
async-trait = "0.1.52"
cab = { version = "0.6.0", optional = true }
cachemap2 = "0.3.0"
circular = "0.3.0"
debugid = "0.8.0"
futures-util = "0.3"
tracing = { version = "0.1.34", features = ["log"] }
minidump-common = { version = "0.24.0", path = "../minidump-common" }
nom = "7"
range-map = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
    "gzip",
    "rustls-tls",
], optional = true }
tempfile = { version = "3.3.0", optional = true }
thiserror = "1.0.37"

[dev-dependencies]
tempfile = "3.3.0"
tokio = { version = "1.12.0", features = ["full"] }
