[package]
name = "breakpad-symbols"
description = "A library for working with Google Breakpad's text-format symbol files."
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
exclude = ["testdata/*"]
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Private API, only here to support the fuzzer
fuzz = []
# Allow retrieval of symbols via HTTP
http = ["reqwest", "tempfile"]
mozilla_cab_symbols = ["http", "cab"]

[dependencies]
async-trait = { workspace = true }
cab = { workspace = true, optional = true }
cachemap2 = { workspace = true }
circular = { workspace = true }
debugid = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
minidump-common = { workspace = true }
nom = { workspace = true }
range-map = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "rustls-tls"], optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
