[package]
name = "minidump-analyzer"
description = "Analyzes minidumps on the system where they were created, using local debug information."
version = "0.15.2"
authors = ["Alex Franchuk <alex.franchuk@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
edition = "2018"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.18", features = ["cargo", "wrap_help", "derive"] }
env_logger = "0.10.0"
futures-util = "0.3.25"
json = "0.12.4"
log = "0.4.17"
minidump = { version = "0.15.2", path = "../minidump" }
minidump-processor = { version = "0.15.2", path = "../minidump-processor" }
tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
minidump-writer = "0.7.0"
tempfile = "3.3.0"
