[package]
name = "minidump-common"
description = "Some common types for working with minidump files."
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
bitflags = { workspace = true }
debugid = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
range-map = { workspace = true }
scroll = { workspace = true, features = ["derive"] }
smart-default = { workspace = true }
