[package]
name = "minidump-processor"
description = "A library for producing stack traces and other useful information from minidump files."
version = "0.17.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
edition = "2018"

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Allows retrieval of symbols from debug info.
debuginfo = ["minidump-unwind/debuginfo"]
default = ["disasm_amd64"]
# Allow disassembling of AMD64 instructions
disasm_amd64 = ["yaxpeax-x86"]
# Allows retrieval of symbol files via HTTP
http = ["minidump-unwind/http"]
# Allows construction of symbol files from native binaries
# TODO why is http implied by dump_syms?
dump_syms = ["breakpad-symbols/dump_syms", "http"]
# Allows retrieval of CABed symbol files from mozilla servers
mozilla_cab_symbols = ["breakpad-symbols/mozilla_cab_symbols"]

[dependencies]
async-trait = "0.1.51"
breakpad-symbols = { version = "0.17.0", path = "../breakpad-symbols" }
debugid = "0.8.0"
futures-util = "0.3.25"
memmap2 = "0.5.7"
minidump = { version = "0.17.0", path = "../minidump" }
minidump-common = { version = "0.17.0", path = "../minidump-common" }
minidump-unwind = { version = "0.17.0", path = "../minidump-unwind" }
scroll = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
tracing = { version = "0.1.34", features = ["log"] }
yaxpeax-x86 = { version = "1.1", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
minidump-synth = { path = "../minidump-synth" }
test-assembler = "0.1.6"
tokio = { version = "1.12.0", features = ["full"] }
