[package]
name = "minidump-processor"
description = "A library for producing stack traces and other useful information from minidump files."
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Allows retrieval of symbols from debug info.
debuginfo = ["minidump-unwind/debuginfo"]
default = ["disasm_amd64"]
# Allow disassembling of AMD64 instructions
disasm_amd64 = ["yaxpeax-x86"]
# Allows retrieval of symbol files via HTTP
http = ["minidump-unwind/http"]
# Allows retrieval of CABed symbol files from mozilla servers
mozilla_cab_symbols = ["breakpad-symbols/mozilla_cab_symbols"]

[dependencies]
async-trait = { workspace = true }
breakpad-symbols = { workspace = true }
debugid = { workspace = true }
futures-util = { workspace = true }
minidump = { workspace = true }
minidump-common = { workspace = true }
minidump-unwind = { workspace = true }
scroll = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
yaxpeax-x86 = { workspace = true, optional = true }

[dev-dependencies]
doc-comment = { workspace = true }
minidump-synth = { workspace = true }
test-assembler = { workspace = true }
tokio = { workspace = true, features = ["full"] }
