[package]
name = "minidump-processor"
description = "A library for producing stack traces and other useful information from minidump files."
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Allows retrieval of symbols from debug info.
debuginfo = ["minidump-unwind/debuginfo"]
default = ["disasm_amd64"]
# Allow disassembling of AMD64 instructions
disasm_amd64 = ["yaxpeax-x86"]
# Allows retrieval of symbol files via HTTP
http = ["minidump-unwind/http"]
# Allows retrieval of CABed symbol files from mozilla servers
mozilla_cab_symbols = ["breakpad-symbols/mozilla_cab_symbols"]

[dependencies]
async-trait = "0.1.88"
breakpad-symbols = { version = "0.24.1", path = "../breakpad-symbols" }
debugid = "0.8.0"
futures-util = "0.3.25"
minidump = { version = "0.24.1", path = "../minidump" }
minidump-common = { version = "0.24.1", path = "../minidump-common" }
minidump-unwind = { version = "0.24.1", path = "../minidump-unwind" }
scroll = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = { version = "0.1.34", features = ["log"] }
yaxpeax-x86 = { version = "2", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
minidump-synth = { path = "../minidump-synth" }
test-assembler = "0.1.6"
tokio = { version = "1.12.0", features = ["full"] }
