[package]
name = "minidump-stackwalk"
description = "Analyzes minidumps and produces a report (either human-readable or JSON)"
version = "0.11.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
keywords = ["breakpad", "symbols"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Allows construction of symbol files from native binaries
dump_syms = ["breakpad-symbols/dump_syms"]

# Allows retrieval of CABed binaries from mozilla servers
mozilla_cab_symbols = ["breakpad-symbols/mozilla_cab_symbols"]

[dependencies]
clap = { version = "3.1", features = ["cargo", "wrap_help", "derive"] }
breakpad-symbols = { version = "0.11.0", path = "../breakpad-symbols", features = ["http"] }
minidump = { version = "0.11.0", path = "../minidump" }
minidump-common = { version = "0.11.0", path = "../minidump-common" }
minidump-processor = { version = "0.11.0", path = "../minidump-processor" }
tokio = { version = "1.12.0", features = ["full"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = "0.3.11"

[dev-dependencies]
insta = "1.13.0"
minidump-synth = { path = "../minidump-synth" }
test-assembler = "0.1.6"
