[package]
name = "minidump-stackwalk"
description = "Analyzes minidumps and produces a report (either human-readable or JSON)"
version = "0.17.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
keywords = ["breakpad", "symbols"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Allows construction of symbol files from native binaries
dump_syms = ["minidump-processor/dump_syms"]
# Allows retrieval of CABed symbol files from mozilla servers
mozilla_cab_symbols = ["minidump-processor/mozilla_cab_symbols"]

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "wrap_help", "derive"] }
indicatif = "0.17.0"
minidump = { version = "0.17.0", path = "../minidump" }
minidump-common = { version = "0.17.0", path = "../minidump-common" }
minidump-processor = { version = "0.17.0", path = "../minidump-processor" }
minidump-unwind = { version = "0.17.0", path = "../minidump-unwind", features = ["debuginfo", "http"] }
tokio = { version = "1.12.0", features = ["full"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = "0.3.14"

[dev-dependencies]
insta = "1.20.0"
minidump-synth = { path = "../minidump-synth" }
test-assembler = "0.1.6"

[package.metadata.release]
pre-release-replacements = [
  {file="../RELEASES.md", search="Next Version", replace="Version {{version}} ({{date}})", min=1},
  {file="../RELEASES.md", search="<!-- next-header -->", replace="<!-- next-header -->\n# Next Version\n", exactly=1},
]
