[package]
name = "minidump-stackwalk"
description = "Analyzes minidumps and produces a report (either human-readable or JSON)"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
keywords = ["breakpad", "symbols"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Allows retrieval of CABed symbol files from mozilla servers
mozilla_cab_symbols = ["minidump-processor/mozilla_cab_symbols"]

[dependencies]
clap = { workspace = true, features = ["cargo", "wrap_help", "derive"] }
indicatif = { workspace = true }
minidump = { workspace = true }
minidump-common = { workspace = true }
minidump-processor = { workspace = true }
minidump-unwind = { workspace = true, features = ["debuginfo", "http"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
minidump-synth = { workspace = true }
test-assembler = { workspace = true }

[package.metadata.release]
pre-release-replacements = [
  {file="../RELEASES.md", search="# Unreleased", replace="# Unreleased\n\nNothing Yet!\n\n\n# Version {{version}} ({{date}})", exactly=1},
]

[package.metadata.wix]
upgrade-guid = "23C72699-7F27-49C7-B8A3-3D5939EB4D6B"
path-guid = "DD461542-889E-4826-886D-E47830290719"
