[package]
name = "minidump-synth"
description = "A library for producing synthetic minidumps for testing."
version = "0.17.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-assembler = "0.1.5"
minidump-common = { version = "0.17.0", path = "../minidump-common" }
scroll = "0.11.0"
