[package]
name = "minidump-synth"
description = "A library for producing synthetic minidumps for testing."
readme = "README.md"
edition = "2021"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
test-assembler = { workspace = true }
minidump-common = { workspace = true }
scroll = { workspace = true }
