[package]
name = "minidump-synth"
description = "A library for producing synthetic minidumps for testing."
readme = "README.md"
edition = "2021"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
test-assembler = "0.1.5"
minidump-common = { version = "0.25.0", path = "../minidump-common" }
scroll = "0.12.0"
