[package]
name = "minidump-tools"
version = "0.2.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]

[dependencies]
breakpad-symbols = { version = "0.1.1", path = "../breakpad-symbols" }
failure = "0.1.1"
minidump = { version = "0.2.0", path = ".." }
minidump-common = { version = "0.2.0", path = "../minidump-common" }
structopt = { version = "0.2", default-features = false }
disasm = { git = "https://github.com/luser/rust-disasm", rev = "01aa908dc4b632594c62cea2c1c646ea954e6f9e" }
reqwest = "0.9.0"
log = "0.4.1"
env_logger = "0.6.0"
