[package]
name = "minidump-tools"
version = "0.9.3"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
edition = "2018"

[dependencies]
breakpad-symbols = { version = "0.9.3", path = "../breakpad-symbols" }
failure = "0.1.1"
minidump = { version = "0.9.3", path = "../minidump" }
minidump-common = { version = "0.9.3", path = "../minidump-common" }
structopt = { version = "0.3", default-features = false }
disasm = { git = "https://github.com/luser/rust-disasm", rev = "274ff86cd5258e8e6534d93ad7a063105b7ecb99" }
reqwest = { version = "0.11.6", features = ["blocking"] }
log = "0.4.1"
env_logger = "0.9.0"
