[package]
name = "minidump-unwind"
description = "A library for producing stack traces from minidump files."
version = "0.24.0"
authors = ["Alex Franchuk <afranchuk@mozilla.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rust-minidump/rust-minidump"
repository = "https://github.com/rust-minidump/rust-minidump"
edition = "2018"

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Alias for debuginfo-symbols.
debuginfo = ["debuginfo-symbols"]
# Allows unwinding and retrieval of symbols from debug info.
debuginfo-symbols = ["debuginfo-unwind", "futures-util", "wholesym"]
# Allows unwinding from debug info.
debuginfo-unwind = ["cachemap2", "framehop", "memmap2", "object"]
# Allows retrieval of symbol files via HTTP
http = ["breakpad-symbols/http"]

[dependencies]
async-trait = "0.1.52"
breakpad-symbols = { version = "0.24.0", path = "../breakpad-symbols" }
cachemap2 = { version = "0.3.0", optional = true }
framehop = { version = "0.13", optional = true }
futures-util = { version = "0.3.25", optional = true }
memmap2 = { version = "0.9", optional = true }
minidump = { version = "0.24.0", path = "../minidump" }
minidump-common = { version = "0.24.0", path = "../minidump-common" }
object = { version = "0.36", default-features = false, features = ["read"], optional = true }
scroll = "0.12.0"
tracing = { version = "0.1.34", features = ["log"] }
wholesym = { version = "0.7", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
test-assembler = "0.1.6"
tokio = { version = "1.12.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
