[package]
name = "minidump-unwind"
description = "A library for producing stack traces from minidump files."
authors = ["Alex Franchuk <afranchuk@mozilla.com>"]
readme = "README.md"
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
travis-ci = { repository = "rust-minidump/rust-minidump" }

[features]
# Alias for debuginfo-symbols.
debuginfo = ["debuginfo-symbols"]
# Allows unwinding and retrieval of symbols from debug info.
debuginfo-symbols = ["debuginfo-unwind", "futures-util", "wholesym"]
# Allows unwinding from debug info.
debuginfo-unwind = ["cachemap2", "framehop", "memmap2", "object"]
# Allows retrieval of symbol files via HTTP
http = ["breakpad-symbols/http"]

[dependencies]
async-trait = { workspace = true }
breakpad-symbols = { workspace = true }
cachemap2 = { workspace = true, optional = true }
framehop = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
minidump = { workspace = true }
minidump-common = { workspace = true }
object = { workspace = true, features = ["read"], optional = true }
scroll = { workspace = true }
tracing = { workspace = true, features = ["log"] }
wholesym = { workspace = true, optional = true }

[dev-dependencies]
doc-comment = { workspace = true }
test-assembler = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[package.metadata.docs.rs]
all-features = true
