[package]
name = "minidump"
description = "A parser for the minidump format."
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
keywords = ["breakpad", "symbols", "minidump"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
debugid = { workspace = true }
encoding_rs = { workspace = true }
tracing = { workspace = true, features = ["log"] }
memmap2 = { workspace = true }
minidump-common = { workspace = true }
num-traits = { workspace = true }
procfs-core = { workspace = true }
range-map = { workspace = true }
scroll = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
uuid = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
env_logger = { workspace = true }
minidump-synth = { workspace = true }
test-assembler = { workspace = true }
doc-comment = { workspace = true }

[features]
# This is a hack to get around the fact that namespaced-features aren't yet on stable
# This can be replaced with
# arbitrary = ["minidump-common/arbitrary", "dep:arbitrary"]
# as soon as https://github.com/rust-lang/cargo/issues/5565 is on an old enough cargo
arbitrary_impls = ["minidump-common/arbitrary", "arbitrary"]
