[package]
name = "synth-minidump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-assembler = "0.1.5"
minidump-common = { version = "0.9.1", path = "../minidump-common" }
encoding = "0.2"
scroll = "0.10.2"