[package]
name = "synth-minidump"
version = "0.10.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-assembler = "0.1.5"
minidump-common = { version = "0.10.0", path = "../minidump-common" }
encoding = "0.2"
scroll = "0.11.0"
